--- a/triadic/triadic.css
+++ b/triadic/triadic.css
@@ -46,7 +46,49 @@ body{
 }
 
 .banner-bottom{
-    background-color: ;
+    background-color: #0f1e6a;
+  height: 20px;
+  margin-bottom: 50px;
+}
+
+.info {
+    display: block;
+    text-align: center;
+}
+
+.info-1{
+    display: flex;
+    align-items: center;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 40px;
+}
+
+.info-2{
+    display: flex;
+    align-items: center;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 40px;
+}
+
+.info-3{
+    display: flex;
+    align-items: center;
+    width: 75%;
+    margin: auto;
+    margin-bottom: 40px;
+}
+
+.image{
+    height: auto;
+    width: 400px;
+    border-radius: 10px;
+}
+
+.text-left {
+    text-align: center;
+    padding-right: 30px;
 }
 
 footer {
@@ -78,4 +120,97 @@ footer {
     background-color: #BFB342;  /* A slight hover effect */
     color: white;  /* Change text color on hover */
     transform: scale(1.05);  /* Subtle scaling effect on hover */
+}
+
+@media screen and (max-width: 768px) {
+    .info-1, .info2, .info-3 {
+        flex-direction: column;
+    }
+
+    .info-1, .info-2, .info-3 {
+        width: 90%;
+        margin: 20px auto;
+    }
+
+    .text-left{
+        text-align: center;
+        padding: 0 10px;
+    }
+
+    .image {
+        height: auto;
+        width: 275px;
+    }
+
+    footer {
+        padding: 20px 10px;
+    }
+
+    .links {
+        flex-direction: column;  /* Stack the links vertically */
+        gap: 15px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .navbar {
+        padding: 10px;
+    }
+
+    .nav-links {
+        display: none;  /* Hide nav links by default */
+        flex-direction: column;
+        gap: 15px;
+        width: 100%;
+        background-color: #EDDD47;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        padding: 20px 0;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    }
+
+    .menu-toggle {
+        display: flex;
+    }
+
+    /* Show the nav links when active */
+    .nav-links.active {
+        display: flex;
+    }
+
+    .nav-links > a {
+        padding: 10px;
+        font-size: 16px;
+        color: black;
+        font-weight: 500;
+        text-align: center;
+    }
+
+    .nav-links > a:hover {
+        background-color: #BFB342;
+        padding: 10px;
+        font-weight: 700;
+        border-radius: 5px;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+        transform: scale(1.05);
+    }
+
+    .logo {
+        max-height: 50px;
+    }
+
+    .banner-bottom {
+        height: 40px;
+        font-size: 14px;
+    }
+
+    .banner-image > img{
+        height: 275px;
+    }
+
+    .image {
+        height: auto;
+        width: 275px;
+    }
 }
